--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -12,10 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="576.0" prefWidth="614.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.camminoAutobus.FXMLController">
-   <top>
-      <Label text="CERCA VIAGGIO AMAT" BorderPane.alignment="CENTER" />
-   </top>
+<BorderPane prefHeight="558.0" prefWidth="614.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.camminoAutobus.FXMLController">
    <center>
       <VBox minHeight="10.0" prefHeight="310.0" prefWidth="614.0" BorderPane.alignment="CENTER">
          <children>
@@ -206,7 +203,10 @@
                      <HBox.margin>
                         <Insets left="10.0" />
                      </HBox.margin></Button>
-                  <Label fx:id="erroreSalva" text="FILE GIA' ESISTENTE NELLA CARTELLA" textFill="RED" visible="false" />
+                  <Label fx:id="erroreSalva" text="FILE GIA' ESISTENTE NELLA CARTELLA" textFill="RED" visible="false">
+                     <padding>
+                        <Insets left="11.0" top="3.0" />
+                     </padding></Label>
                </children>
                <padding>
                   <Insets bottom="8.0" left="8.0" top="8.0" />
