--- a/src/main/resources/fxml/Scene2.fxml
+++ b/src/main/resources/fxml/Scene2.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -9,27 +10,57 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="BorderPaneScena2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.camminoAutobus.CodiciLocaliController">
+<BorderPane fx:id="BorderPaneScena2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="283.0" prefWidth="600.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.camminoAutobus.CodiciLocaliController">
    <center>
-      <VBox fx:id="scena2" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox fx:id="scena2" prefHeight="152.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Label text="SCEGLI LA VIA DI PARTENZA" />
-                  <TextField fx:id="txtPartenza" promptText="inserisci parola chiave" />
-                  <Button mnemonicParsing="false" onAction="#doCercaPartenza" text="RICERCA" />
-                  <ComboBox fx:id="cmbPartenza" prefWidth="150.0" promptText="Via di partenza" />
+                  <Label text="SCEGLI LA VIA DI PARTENZA:">
+                     <HBox.margin>
+                        <Insets left="8.0" top="4.0" />
+                     </HBox.margin></Label>
+                  <TextField fx:id="txtPartenza" promptText="inserisci parola chiave">
+                     <HBox.margin>
+                        <Insets left="6.0" />
+                     </HBox.margin></TextField>
+                  <Button mnemonicParsing="false" onAction="#doCercaPartenza" text="RICERCA">
+                     <HBox.margin>
+                        <Insets left="6.0" />
+                     </HBox.margin></Button>
+                  <ComboBox fx:id="cmbPartenza" prefWidth="150.0" promptText="Via di partenza">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin></ComboBox>
                </children>
+               <VBox.margin>
+                  <Insets top="8.0" />
+               </VBox.margin>
             </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <HBox prefHeight="100.0" prefWidth="600.0">
                <children>
-                  <Label text="SCEGLI LA VIA DI ARRIVO" />
-                  <TextField fx:id="txtArrivo" promptText="inserisci parola chiave" />
-                  <Button mnemonicParsing="false" onAction="#doCercaArrivo" text="RICERCA" />
-                  <ComboBox fx:id="cmbArrivo" prefWidth="150.0" promptText="Via di arrivo" />
+                  <Label text="SCEGLI LA VIA DI ARRIVO:">
+                     <HBox.margin>
+                        <Insets left="8.0" top="4.0" />
+                     </HBox.margin></Label>
+                  <TextField fx:id="txtArrivo" promptText="inserisci parola chiave">
+                     <HBox.margin>
+                        <Insets left="21.0" />
+                     </HBox.margin></TextField>
+                  <Button mnemonicParsing="false" onAction="#doCercaArrivo" text="RICERCA">
+                     <HBox.margin>
+                        <Insets left="6.0" />
+                     </HBox.margin></Button>
+                  <ComboBox fx:id="cmbArrivo" prefWidth="150.0" promptText="Via di arrivo">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin></ComboBox>
                </children>
             </HBox>
-            <Button mnemonicParsing="false" onAction="#doInserisciDati" text="OK!" />
+            <Button mnemonicParsing="false" onAction="#doInserisciDati" text="OK!">
+               <VBox.margin>
+                  <Insets bottom="8.0" left="8.0" />
+               </VBox.margin></Button>
          </children>
       </VBox>
    </center>
